--- a/ltb2fbx_vs.vcxproj
+++ b/ltb2fbx_vs.vcxproj
@@ -82,17 +82,17 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)bin\</OutDir>
-    <IncludePath>$(ProjectDir)lithtech\libs\dibmgr;$(ProjectDir)lzma;$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(ProjectDir)assimp\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)lzma;$(ProjectDir)assimp\lib\x64;$(LibraryPath)</LibraryPath>
-    <SourcePath>$(ProjectDir)lithtech\libs\dibmgr;$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(SourcePath)</SourcePath>
+    <IncludePath>$(ProjectDir)boost\includes;$(ProjectDir)lithtech\libs\dibmgr;$(ProjectDir)lzma;$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(ProjectDir)assimp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)boost\libs;$(ProjectDir)assimp\lib\x64;$(LibraryPath)</LibraryPath>
+    <SourcePath>$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(SourcePath)</SourcePath>
     <TargetName>ltb2fbx</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)bin\</OutDir>
-    <IncludePath>$(ProjectDir)lithtech\libs\dibmgr;$(ProjectDir)lzma;$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(ProjectDir)assimp\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(ProjectDir)lzma;$(ProjectDir)assimp\lib\x64;$(LibraryPath)</LibraryPath>
-    <SourcePath>$(ProjectDir)lithtech\libs\dibmgr;$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(SourcePath)</SourcePath>
+    <IncludePath>$(ProjectDir)boost\includes;$(ProjectDir)lithtech\libs\dibmgr;$(ProjectDir)lzma;$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(ProjectDir)assimp\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)boost\libs;$(ProjectDir)assimp\lib\x64;$(LibraryPath)</LibraryPath>
+    <SourcePath>$(ProjectDir)lithtech\stdlith;$(ProjectDir)lithtech\sdk;$(ProjectDir)lithtech\runtime\shared;$(ProjectDir)lithtech\runtime\model;$(ProjectDir)lithtech\runtime\lithtemplate;$(ProjectDir)lithtech\runtime\kernel;$(SourcePath)</SourcePath>
     <TargetName>ltb2fbx</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -135,7 +135,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libboost_filesystem-iw-mt-x64-1_80.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -152,7 +152,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libboost_filesystem-iw-mt-x64-1_80.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
